Next Release

  - Added new event types that are emitted when a subprocess sends data to
    stdout or stderr that would be logged (i.e., data received when not in 
    the special capture mode used by the PROCESS_COMMUNICATION events).  
    Event listeners can subscribe to either PROCESS_LOG_STDOUT or 
    PROCESS_LOG_STDERR individually, or PROCESS_LOG for both.

  - Values for subprocess environment variables specified with environment=
    in supervisord.conf can now be optionally quoted, allowing them to 
    contain commas.  Patch by Tim Godfrey.

  - Added a new event type, REMOTE_COMMUNICATION, that is emitted by a new
    RPC method, supervisor.sendRemoteCommEvent().

  - Patch for bug #268 (KeyError on 'here' expansion for stdout/stderr_logfile)
    from David E. Kindred.

  - Add ``reread``, ``update``, and ``avail`` commands based on Anders
    Quist's ``online_config_reload.diff`` patch.  This patch extends
    the "add" and "drop" commands with automagical behavior::

      In supervisorctl:

        supervisor> status
        bar                              RUNNING    pid 14864, uptime 18:03:42
        baz                              RUNNING    pid 23260, uptime 0:10:16
        foo                              RUNNING    pid 14866, uptime 18:03:42
        gazonk                           RUNNING    pid 23261, uptime 0:10:16
        supervisor> avail
        bar                              in use    auto      999:999
        baz                              in use    auto      999:999
        foo                              in use    auto      999:999
        gazonk                           in use    auto      999:999
        quux                             avail     auto      999:999

      Now we add this to our conf:

        [group:zegroup]
        programs=baz,gazonk

      Then we reread conf:

        supervisor> reread
        baz: disappeared
        gazonk: disappeared
        quux: available
        zegroup: available